--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
 
-    server_name frontend-1.wa.local;
+    server_name frontend.wa.local;
     location / {
-        proxy_pass http://frontend-1:9100;
+        proxy_pass http://frontend:9100;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -14,9 +14,9 @@ server {
 server {
     listen 80;
 
-    server_name frontend-2.wa.haker.local;
+    server_name haker.local;
     location / {
-        proxy_pass http://frontend-2:3000;
+        proxy_pass http://haker:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
